# np

./: Cargo.toml  LICENSE  README.md  dist-workspace.toml
npm/: .eslintrc.json  .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.test.json  vitest.config.ts
npm/src/: cli.ts  command-executor.ts  config.ts  main.ts  managers.ts
npm/src/tests/: package-detector.spec.ts  script-handler.spec.ts
src/: cli.rs  command_executor.rs  config.rs  lib.rs  main.rs  managers.rs  package_detector.rs  script_handler.rs
src/tests/: command_executor_tests.rs  package_detector_tests.rs
tests/: package_detector_tests.rs  script_handler_tests.rs
wix/: main.wxs
