[package]
name = "np"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
inquire = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
anyhow = "1"
thiserror = "1"
which = "6"
tokio = { version = "1", features = ["process", "rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
