[package]
name = "np"
version = "0.1.0"
edition = "2021"
authors = ["jordyfontoura"]
description = "A blazingly fast, intelligent package manager proxy that automatically detects and forwards commands to npm, yarn, or pnpm"
readme = "README.md"
repository = "https://github.com/jordyfontoura/np"
license = "MIT"
keywords = ["npm", "yarn", "pnpm", "package-manager", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
inquire = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
anyhow = "1"
thiserror = "1"
which = "6"
tokio = { version = "1", features = ["process", "rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
