[package]
name = "np"
version = "0.1.0"
edition = "2021"
authors = ["jordyfontoura"]
description = "A blazingly fast, intelligent package manager proxy that automatically detects and forwards commands to npm, yarn, or pnpm"
readme = "README.md"
repository = "https://github.com/jordyfontoura/np"
homepage = "https://github.com/jordyfontoura/np"
license = "MIT"
keywords = ["npm", "yarn", "pnpm", "package-manager", "cli"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.wix]
upgrade-guid = "4E1BB164-FA12-4E86-8183-BB9E941D0252"
path-guid = "FD9F187C-8DE9-4182-B24D-FEDEA2BD9B13"
license = false
eula = false

[dependencies]
clap = { version = "4", features = ["derive"] }
inquire = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
anyhow = "1"
thiserror = "1"
which = "6"
tokio = { version = "1", features = ["process", "rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
